<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="@dimen/space_super_small"
            android:layout_marginTop="@dimen/space_small"
            android:layout_marginBottom="@dimen/space_small"
            android:src="@drawable/ic_love_art_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_small"
                android:layout_marginTop="@dimen/space_medium"
                android:textSize="16dp"/>

            <TextView
                android:id="@+id/item_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_medium"
                android:textSize="12dp"
                android:text="@string/release_date"
                />

            <TextView
                android:id="@+id/item_og_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_medium"
                android:textSize="12dp"
                android:text="@string/original_language"
                />

            <TextView
                android:id="@+id/item_vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_medium"
                android:textSize="12dp"
                android:text="@string/vote_count"
                />

            <RatingBar
                android:id="@+id/item_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginTop="@dimen/space_small"
                android:layout_marginStart="@dimen/space_medium"
                style="@style/media_rating"
                android:stepSize="0.1"
                />
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>